--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
       <h3 class="right-column_city">г. Москва</h3>
 
       <nav class="navigation">
-        <a class="navigation__link" href="">
+        <a class="navigation__link" href="instagram.com" target="_blank">
           <img class="navigation__link-logo" src="./logo/insagram.png" alt="instagram-logo">
         </a>
-        <a class="navigation__link" href="">
+        <a class="navigation__link" href="https://wa.me/1234567890" target="_blank">
           <img class="navigation__link-logo" src="./logo/tel.png" alt="whatsapp-logo">
         </a>
-        <a class="navigation__link" href="">
+        <a class="navigation__link" href="vk.com" target="_blank">
           <img class="navigation__link-logo" src="./logo/vk.png" alt="vkontakte-logo">
         </a>
-        <a class="navigation__link" href="">
+        <a class="navigation__link" href="https://t.me/username" target="_blank">
           <img class="navigation__link-logo" src="./logo/telegram.png" alt="telegram-logo">
         </a>
         <a class="navigation__link" href="">
           <img class="navigation__link-logo" src="./logo/in.png" alt="in-logo">
         </a>
-        <a class="navigation__link" href="">
+        <a class="navigation__link" href="https://github.com/" target="_blank">
           <img class="navigation__link-logo" src="./logo/git.png" alt="git-logo">
         </a>
       </nav>
